# rocket-test

./: .env.sample  README.md  docker-compose.prod.yml  docker-compose.yml  start-dev.sh
core/: Cargo.toml  Dockerfile  Rocket.toml  start.sh
core/migrations/2020-08-23-224507_create_accounts/: up.sql
core/migrations/2020-08-23-225313_create_users/: up.sql
core/migrations/2020-08-23-230228_create_user_accounts/: down.sql  up.sql
core/src/: lib.rs  main.rs  schema.rs
core/src/endpoints/: account.rs
core/src/models/: account.rs  mod.rs  user.rs  user_account.rs
core/src/utils/: mod.rs  pg_pool.rs  responders.rs
core/zdockercache/: dummy-20200823.rs
site/: Dockerfile  elm.json  package-lock.json  package.json  server.js  webpack.config.js
site/src/: Main.elm  Styles.elm  Types.elm  Update.elm  Utils.elm  View.elm  index.ejs
site/src/Account/: Data.elm  Types.elm  Update.elm  View.elm
site/src/Router/: Routes.elm  Types.elm  Update.elm
site/tests/: AccountTest.elm
